[gd_scene load_steps=6 format=3 uid="uid://7vpjudawwxwx"]

[ext_resource type="Texture2D" uid="uid://dp6wd3220bj6m" path="res://art/weaponchoice.png" id="1_6ngwt"]
[ext_resource type="Script" path="res://Scenes/weaponselect.gd" id="1_kubxp"]
[ext_resource type="Texture2D" uid="uid://d4ekmshgry7qj" path="res://art/weapons/knife.png" id="2_q2hr0"]
[ext_resource type="Texture2D" uid="uid://dxvxx0jd8pr03" path="res://art/weapons/Tenderizer.png" id="3_qq116"]
[ext_resource type="Texture2D" uid="uid://bvdyeh0e5xdu4" path="res://art/weapons/EnergyOrb.png" id="4_t2jol"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kubxp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6ngwt")

[node name="knifebutton" type="TextureButton" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 164.0
offset_top = 275.0
offset_right = 410.0
offset_bottom = 521.0
texture_normal = ExtResource("2_q2hr0")
stretch_mode = 0

[node name="tenderbutton" type="TextureButton" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 479.0
offset_top = 251.0
offset_right = 753.0
offset_bottom = 525.0
texture_normal = ExtResource("3_qq116")
stretch_mode = 0

[node name="orbbutton" type="TextureButton" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 842.0
offset_top = 247.0
offset_right = 1113.0
offset_bottom = 518.0
texture_normal = ExtResource("4_t2jol")
stretch_mode = 0

[connection signal="pressed" from="TextureRect/knifebutton" to="." method="_on_knifebutton_pressed"]
[connection signal="pressed" from="TextureRect/tenderbutton" to="." method="_on_tenderbutton_pressed"]
[connection signal="pressed" from="TextureRect/orbbutton" to="." method="_on_orbbutton_pressed"]
